# league-sim

./: Cargo.toml  LICENSE  README.md  update_data.sh
.github/workflows/: ci.yml  deploy.yml
data/champions/: khazix.bin.json  khazix.bin_formated.json
game-data-parser/: Cargo.toml  update_data.sh
game-data-parser/source_3/: items.json
game-data-parser/source_3/champions/: Khazix.json
game-data-parser/src/: main.rs
league-sim-backend/: Cargo.toml  update_data.sh
league-sim-backend/data/champions/: khazix.bin_formated.json
league-sim-backend/source_1/: from  items.json  items_formatted.json  perks.json  perks_formated.json
league-sim-backend/source_2/: from
league-sim-backend/source_3/: from
league-sim-backend/source_4/: 121.json  121_formatted.json
league-sim-backend/src/: attack.rs  data_input.rs  lib.rs  main.rs  simulation.rs
league-sim-backend/src/data_input/: abilities.rs  champions.rs  champions_gen.rs  common.rs  items.rs  items_gen.rs  runes.rs
league-sim-backend/src/data_input/champions_gen/: khazix.rs
league-sim-backend/src/data_input/items_gen/: items_cdragon_gen.rs  items_meraki_gen.rs
league-sim-frontend/: index.html  package-lock.json  package.json  rollup.config.js  vite.config.js
league-sim-frontend/src/: App.vue  main.js  style.css
shared-structs/: Cargo.toml
source_1/: items.json  items_formatted.json  perks.json
source_3/: items.json  items_formatted.json
source_4/: 121.json  121_formatted.json
src/: abilities.rs  attack.rs  champions.rs  data_input.rs  game_data.rs  items.rs  main.rs  simulation.rs
(+15 files in other folders)
