[package]
name = "league-sim-backend"
version = "0.1.0"
authors = ["Chaouki Dhib <chaodhib@gmail.com>"]
edition = "2021"
rust-version = "1.82"

[dependencies]
serde_json = "1.0.117"
serde = "1.0.202"
shared_structs = { path = "../shared-structs" }
itertools = "0.13.0"
rayon = "1.10.0"
crossbeam = "0.8.4"
pkg-config = "0.3.31"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.99"
proc-macro2 = "1.0.93"
serde_derive = "1.0.217"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
